# StreamGo

./: .env.example  .eslintrc.json  .gitignore  ADDON_ANALYSIS.md  ADDON_FIXES.md  ADDON_HEALTH_FIX.md  ADDON_PROTOCOL.md  ADDON_TESTING_GUIDE.md  BUILD_SUCCESS.md  CHANGELOG.md  CHANGELOG_FIXES.md  CONTRIBUTING.md  CURRENT_STATE_AND_GOALS.md  EVOLUTION_ROADMAP.md  FEATURES_DONE.md  FINAL_IMPLEMENTATION_SUMMARY.md  FIXES_APPLIED.md  FIXES_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LINUX_ROADMAP.md  MIGRATION_CHECKLIST.md  MIGRATION_COMPLETE.md  Makefile  OPTIMIZATIONS_SUMMARY.md  P0_STABILIZATION_COMPLETE.md  P1_TAURI_API_MIGRATION_COMPLETE.md  PHASE_0_COMPLETE.md  PHASE_1.1_COMPLETE.md  PHASE_1.3_FRONTEND_COMPLETE.md  PHASE_1.5_COMPLETE.md  PHASE_1_1_MIGRATION.md  PHASE_1_COMPLETE.md  PHASE_1_PROGRESS.md  PHASE_2_PLAN.md  PHASE_2_STATUS.md  PHASE_3_PLANNING.md  PHASE_3_PROGRESS.md  PHASE_3_SUMMARY.md  PROJECT_ANALYSIS_SUMMARY.md  (+36 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: build.yml  ci.yml  release.yml
docs/: AUTO_DISABLE_ADDONS.md  BUNDLE_OPTIMIZATION.md  CASTING.md  CASTING_UI_INTEGRATION.md  CI-CD-Troubleshooting.md  CODE_SIGNING.md  CODE_SIGNING_GUIDE.md  HEALTH_MONITORING.md  HYPRLAND_OPTIMIZATION.md  Installation.md  KEYBOARD_SHORTCUTS.md  LOCAL_MEDIA_SCANNING.md  MANIFEST_URL_INSTALLATION.md  P4_IMPROVEMENTS.md  PHASE_1_SUMMARY.md  PHASE_2.4_COMPLETE.md  PHASE_2_COMPLETION_PLAN.md  PHASE_2_PROGRESS.md  PHASE_4_COMPLETE.md  PHASE_5_PLAN.md  PHASE_5_PROGRESS.md  PHASE_5_TESTS.md  RELEASE_PROCESS.md  SECURITY_IMPROVEMENTS.md  SUBTITLE_AUTO_FETCH.md  THEME_PROPOSAL.md  UI_OPTIMIZATIONS.md
docs/archive/: COMPLETED_WORK.md  IMPLEMENTATION_SUMMARY.md  P2_DISTRIBUTION_SUMMARY.md  P3_COMPLETE.md  P3_LOGGING_SUMMARY.md  P4_COMPLETION_SUMMARY.md  P4_PLAN.md  PHASE_0_COMPLETE.md  PHASE_0_PROGRESS.md  PHASE_1.2_COMPLETE.md  PHASE_1.3_COMPLETE.md  PHASE_1_1_STATUS.md  PHASE_2.1_COMPLETE.md  PHASE_2.2_COMPLETE.md  PHASE_2.3_COMPLETE.md  PHASE_2_COMPLETE.md  README.md
docs/archive/legacy-scaffold/: README.md  addon-catalog-loader.ts  catalog-browser.ts  detail.html  detail.js  imageOptimization.ts  index.html  script.js
e2e/: addon-health.spec.ts  diagnostics.spec.ts  helpers.ts  image-loading.spec.ts
locales/: ar.ftl  de.ftl  en.ftl  es.ftl  fr.ftl  hi.ftl  it.ftl  ja.ftl  ko.ftl  pt.ftl  ru.ftl  zh.ftl
scripts/: bump-version.sh  dev.sh
src/: App.svelte  addon-manifest-loader.ts  addon-store.ts  app.ts  casting-integration.ts  context-menu.ts  dash-player.ts  detail.js  diagnostics.ts  episode-navigator.ts  error-logger.ts  external-player.ts  health-api.ts  i18n.ts  index.html  index_old.html  main.ts  notifications-manager.ts  onboarding.html  onboarding.ts  player-factory.ts  player.ts  playlists.ts  script.js  script_old.js  search-history.ts  settings.ts  skip-detector.ts  stream-format-detector.ts  styles.css  styles_old.css  subtitle-parser.ts  tauri-init.ts  telemetry.ts  torrent-player.ts  ui-utils.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: register_addons.rs  test_catalogs.rs  test_list_catalogs.rs
src-tauri/src/: addon_protocol.rs  aggregator.rs  api.rs  cache.rs  calendar.rs  casting.rs  database.rs  folder_watcher.rs  i18n.rs  lib.rs  live_tv.rs  local_media.rs  logging.rs  migrations.rs  models.rs  notifications.rs  player.rs  streaming_server.rs  subtitle_providers.rs
src-tauri/tests/: integration_test.rs  test_builtin.rs
src/__tests__/: skip-detector.test.ts
src/components/: AddonCatalog.svelte  CastButton.svelte  DevicePicker.svelte  GlobalSearch.svelte  ProfileManager.svelte  Sidebar.svelte  UpdateNotification.svelte
src/components/__tests__/: AddonCatalog.rating.test.ts
src/components/addons/: AddonsSection.svelte
src/components/calendar/: CalendarSection.svelte
src/components/detail/: DetailSection.svelte  StreamPicker.svelte
src/components/discover/: DiscoverSection.svelte
src/components/home/: HomeSection.svelte
src/components/player/: PlayerStats.svelte  PlayerUI.svelte  QualitySelector.svelte  SubtitleControls.svelte
src/components/playlists/: PlaylistsSection.svelte
src/components/search/: SearchSection.svelte
src/legacy/: main-vanilla.ts
src/shims/: bittorrent-dht.ts
src/stores/: addonStore.ts  castingStore.ts  library.ts  mediaStore.ts  navigationStore.ts  player.ts  playlistStore.ts  searchStore.ts  settings.ts
src/tests/: setup.ts
src/types/: shims.d.ts  tauri.d.ts
src/utils/: batchUpdates.ts  imageLazyLoad.ts  imageOptimization.ts  security.ts
tests/e2e/: README.md  addon-catalog.spec.ts  addon-health.spec.ts  addon-store.spec.ts  app.spec.ts  auto-updater.spec.ts  diagnostics.spec.ts  library.spec.ts  player-controls.spec.ts  player-dash.spec.ts  player-subtitles.spec.ts  player.spec.ts  playlists.spec.ts  profiles.spec.ts  settings.spec.ts  watchlist-favorites.spec.ts
(+6 files in other folders)
