[package]
name = "streamgo"
version = "0.1.0"
description = "StreamGo - A modern media center and video streaming application"
authors = ["StreamGo Team"]
license = "MIT"
repository = "https://github.com/GeneticxCln/StreamGo"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
# Core dependencies
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Tauri dependencies
tauri = { version = "2.4.1", features = [] }
tauri-plugin-log = "2.4.0"
# tauri-plugin-updater = "2.4.0"  # Disabled - no code signing certificates
tauri-plugin-process = "2.3.0"
tauri-plugin-notification = "2.3.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# File system utilities
dirs = "5.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# JSON Web Tokens (for authentication)
jsonwebtoken = "9.0"

# URL parsing
url = "2.5"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Lazy static initialization
once_cell = "1.19"
dashmap = "6.0"

# Environment variables from .env file
dotenvy = "0.15"

# Torrent streaming
librqbit = "8.1"
axum = { version = "0.7", features = ["http2", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# Video transcoding and media processing
tokio-process = "0.2"

# Internationalization
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = "0.9"

# Release profile optimizations for Linux
[profile.release]
opt-level = 3          # Maximum optimizations
lto = "fat"            # Link-time optimization across all crates
codegen-units = 1      # Better optimization, slower compile
strip = true           # Strip debug symbols (smaller binary)
panic = "abort"        # Smaller binary, faster panic handling
